<resources>
    <string name="app_name">Don\'t forget it!</string>
    <string name="tab_text_1">Einkaufsliste</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_Product">Hier das Produkt eintragen</string>
    <string name="hint_Amount">Hier die Menge eintragen</string>
    <string name="hint_Store">Hier den Ort eintragen</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="btn_ok">Hinzufügen</string>
    <string name="text_Product">Produkt:</string>
    <string name="text_Amount">Menge:</string>
    <string name="text_Store">Ort:</string>
    <string name="text_unit">Einheit</string>
    <string name="delete_text">Möchten Sie wirklich alle Einträge löschen?</string>
    <string-array name="array_unit">
        <item>Bund</item>
        <item>Beutel</item>
        <item>Packung</item>
        <item>Kilo</item>
        <item>Liter</item>
        <item>Stück</item>
        <item>Gramm</item>
        <item>Pfund</item>
        <item>Milliliter</item>
        <item>Becher</item>
        <item>Kasten</item>
    </string-array>
</resources>